// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`eventLog log chained events from upper level function call 1`] = `
Array [
  Array [
    Object {
      "event": "upper.original",
    },
    "upper.original",
  ],
  Array [
    Object {
      "event": "upper",
    },
    "upper",
  ],
]
`;

exports[`eventLog log the error event when input function fails 1`] = `Array []`;

exports[`eventLog log the error event when input function fails 2`] = `
Array [
  Array [
    Object {
      "error": Object {
        "message": "error",
      },
      "event": "original",
    },
    "error",
  ],
]
`;

exports[`eventLog log the parsed error when errorParse set 1`] = `Array []`;

exports[`eventLog log the parsed error when errorParse set 2`] = `
Array [
  Array [
    Object {
      "error": Object {
        "message": "error",
        "stack": "Error: error
    at ",
      },
      "event": "original",
    },
    "error",
  ],
]
`;

exports[`eventLog log the success event with param when enabled 1`] = `
Array [
  Array [
    Object {
      "event": "original",
      "param": Object {
        "text": "yes",
      },
    },
    "original",
  ],
]
`;

exports[`eventLog log the success event with result when enabled 1`] = `
Array [
  Array [
    Object {
      "event": "original",
      "result": "yes",
    },
    "original",
  ],
]
`;
